--- a/StarboundApiDocs/StarboundApiDocs/StarboundApiDocViewer.csproj
+++ b/StarboundApiDocs/StarboundApiDocs/StarboundApiDocViewer.csproj
@@ -126,6 +126,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Template\template.html" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\splitter.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
