--- a/StarboundApiDocs/StarboundApiDocs/StarboundApiDocViewer.csproj
+++ b/StarboundApiDocs/StarboundApiDocs/StarboundApiDocViewer.csproj
@@ -9,11 +9,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StarboundApiDocViewer</RootNamespace>
     <AssemblyName>StarboundApiDocViewer</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Release\StarboundApiDocViewer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Images\sb.ico</ApplicationIcon>
@@ -100,18 +102,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\directory.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\markdown.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\sb.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\settings.png" />
-    <Resource Include="Images\zoom_in.png" />
-    <Resource Include="Images\zoom_out.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Template\script.js" />
@@ -120,14 +111,23 @@
     <EmbeddedResource Include="Template\gitlike.css" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\down.png" />
-    <Resource Include="Images\up.png" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Template\template.html" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\splitter.png" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\cross.png" />
+    <Resource Include="Images\file.png" />
+    <Resource Include="Images\folder.png" />
+    <Resource Include="Images\next.png" />
+    <Resource Include="Images\prev.png" />
+    <Resource Include="Images\stack.png" />
+    <Resource Include="Images\zoom-in.png" />
+    <Resource Include="Images\zoom-out.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\search.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
